--- a/code/univariate_regression.ipynb
+++ b/code/univariate_regression.ipynb
@@ -222,8 +222,12 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "scaler = StandardScaler()\n",
-    "train[corr_matr_feats] = scaler.fit_transform(train[corr_matr_feats])\n",
-    "test[corr_matr_feats] = scaler.transform(test[corr_matr_feats])"
+    "train['userReviewsTotal'] = scaler.fit_transform(train[['userReviewsTotal']])\n",
+    "test['userReviewsTotal'] = scaler.transform(test[['userReviewsTotal']])\n",
+    "\n",
+    "scaler_target = StandardScaler()\n",
+    "train['criticReviewsTotal'] = scaler_target.fit_transform(train[['criticReviewsTotal']])\n",
+    "test['criticReviewsTotal'] = scaler_target.transform(test[['criticReviewsTotal']])\n"
    ]
   },
   {
@@ -333,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "d3a6c944",
    "metadata": {},
    "outputs": [
@@ -459,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "7ac023d3",
    "metadata": {},
    "outputs": [
@@ -617,18 +621,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "9443bff1",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/numpy/ma/core.py:2820: RuntimeWarning: invalid value encountered in cast\n",
-      "  _data = np.array(data, dtype=dtype, copy=copy,\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
