--- a/report_data_semantics/capitolo1.tex
+++ b/report_data_semantics/capitolo1.tex
@@ -61,7 +61,7 @@ The decision was not repeated for \textit{tvSpecial} and \textit{tvMiniSeries}, 
         \captionsetup{width=0.9\linewidth, justification=centering}
         \label{fig:titleType_distrib}
     \end{subfigure}
-    \begin{subfigure}{0.49\textwidth}
+    \begin{subfigure}{0.5\textwidth}
         \centering
         \includegraphics[width=0.98\textwidth]{plots/rating_distrib.png}     %se teniamo 0.65 ci sta sotto la tabella delle continuous
         \caption{Distribution of \texttt{rating}}
@@ -70,7 +70,7 @@ The decision was not repeated for \textit{tvSpecial} and \textit{tvMiniSeries}, 
     \end{subfigure}
     \captionsetup{justification=centering}
     \caption{Distribution of the \texttt{titleType} and \texttt{rating} attributes}
-    \label{fig:distrib}
+    \label{fig:distrib_categorical}
 \end{figure}
 
 As shown in figure~\ref{fig:rating_distrib}, the \texttt{rating} attribute roughly follows a normal distribution, with a slightly asymmetric peak:
