--- a/report_data_semantics/capitolo2.tex
+++ b/report_data_semantics/capitolo2.tex
@@ -26,7 +26,7 @@ The objective was to find a configuration that reduces the SSE while maintaining
 The plots in Figure X show that \textit{k} = 4 provides a balance between the two values (obtaining SSE equal to 535.51 and 0.315 for the Silhouette score).
 Only for visualization purposes, Principal Component Analysis (PCA) was employed. 
 The first two components account for 58.01\% and 21.48\% of the total variance, indicating that this projection provides a fairly informative view of the clustering structure. 
-The cluster results are presented in figure~\ref{fig:kmeans_visualization}. 
+The resulting clusters are presented in figure~\ref{fig:kmeans_visualization}. 
 The 4 distinct clusters appear well-separated, suggesting that K-means managed to capture meaningful groupings in the data.
 
 
@@ -135,11 +135,11 @@ It is important to note that, in this context, a high Silhouette score can be mi
 \begin{table}[h]
 % \hspace*{-0.5cm}
 \centering
-\begin{tabular}{llll}
+\begin{tabular}{llcl}
 \toprule
 \textbf{eps threshold} & \textbf{Min points} & \textbf{Silhouette} & \textbf{Cluster composition}  \\
 \midrule
-\texttt{\textbf{$\varepsilon$} $>$ $0.16$} & for any tested value & \texttt{---} & never led to more than one cluster \\
+\texttt{\textbf{$\varepsilon$} $>$ $0.16$} & for any tested value & \texttt{$-$} & never led to more than one cluster \\
 \texttt{$0.13$ $\leq$ \textbf{$\varepsilon$} $\leq$ $0.16$} & for any tested value &  $[0.54,\ 0.70]$  & led to one cluster and, occasionally, 1 or 2 minor ones\\
 \texttt{\textbf{$\varepsilon$} $<$ $0.13$}& for any tested value & $[0.10,\ 0.31]$ & the big cluster it's splitted in two different ones \\
 \texttt{\textbf{$\varepsilon$} $\leq$ $0.10$} & lower values $[4,\ 5]$& $[0.10,\ 0.25]$  & led to several, not meaningful, clusters of 5/6 points\\
@@ -153,16 +153,16 @@ It is important to note that, in this context, a high Silhouette score can be mi
 
 Exlcuding the combination with higher \textit{Eps} value, that made the points collaps into one cluster, and the ones with low \textit{Eps} and few \texttt{min\_pts} ,that resulted in over-fragmentation, 
 the analysis focused on \textit{Eps} in the range $[0.11,\ 0.13)$.
-Despite the limitations of the dataset structure, in this range the algorithm was able to differentiate between regions of varying density, 
+Despite the limitations of the dataset structure, in this range the algorithm was able to differentiate between regions of varying density.
 % producing several clusters of very few elements (5/6), typically corresponding to isolated outliers or noise points rather than meaningful groups, 
 
 One of the most interesting compromise (though still suboptimal in absolute terms) was found with \textit{Eps} = 0.11, \texttt{min\_points} = 7: 
 As shown in (Figure~\ref{fig:dbscan_visualization}), this setting resulted in a 3 cluster structure: a compact cluster of 10378 points was extracted from the densest region, a less dense cluster with fewer points (4347) captured intermediate-density areas or mild outliers, 
 and a very small one (only 11 points), but well-separated, cluster effectively captured a potential relevant local pattern. Only 219 points were labeled as noise, and the Silhouette Score was 0.2699.\\
 
-\textbf{QUESTA PARTE VOLENDO PUò ANDARE NELLE CONSIDERAZIONI GENERALI}\\
-To conclude, these observations highlight DBSCAN's limitations when applied to datasets with skewed feature distributions and unbalanced local densities.
-Nonetheless, the exploration helped isolate parameter ranges where meaningful subclusters begin to emerge,beyond the dominant density mass.
+% \textbf{QUESTA PARTE VOLENDO PUò ANDARE NELLE CONSIDERAZIONI GENERALI}\\
+% To conclude, these observations highlight DBSCAN's limitations when applied to datasets with skewed feature distributions and unbalanced local densities.
+% Nonetheless, the exploration helped isolate parameter ranges where meaningful subclusters begin to emerge,beyond the dominant density mass.
 
 
 
@@ -336,35 +336,19 @@ is a product of the sparsity of these clusters' regions.
 \end{figure}
 
 \section{General considerations}\label{sec:considerations}
-\textbf{PUNTI TRATTABILI (non in ordine):}
+K-means achieved a high Silhouette score (0.315) and low SSE (535.51), but only after reducing the number of variables. 
+This reflects the algorithm's tendency to perform well in simplified feature spaces, though at the cost of losing some informational richness.\\
+In comparison, hierarchical clustering using Ward's method, which also minimizes SSE, 
+led to lower performance (Silhouette 0.140, SSE 1329), but more variables were kept,
+providing a broader view of the dataset. The resulting clusters were less clearly
+separated, but Ward's method is better at capturing hierarchical structures, which can be informative in exploratory analysis. In addition, given that the dataset is sparse and unbalanced, a high 
+Silhouette score alone is not a reliable indicator of clustering quality.\\
+DBSCAN produced acceptable Silhouette scores as well (0.269, excluding noise), 
+but this is largely due to its tendency to merge dense areas together, while treating isolated points as noise. 
+While this can improve internal cohesion metrics, it does not reflect meaningful segmentation, especially when the data contains a dominant dense area. 
+However, the analysis revealed parameter ranges where meaningful subclusters start to emerge, beyond the dominant density mass.\\
+Overall, each algorithm showed trade-offs: K-means achieved compact clusters with fewer variables, 
+hierarchical clustering with Ward's method retained more information but less separation, 
+and DBSCAN captured dense areas but was sensitive to data structure and tuning.
 
-- k-means raggiunge valori alti di silhouette ma perchè le variabili usate sono poche - questo può essere
-confrontato con ward's che usa invece più variabili (ma paragonabile per valore di silhouette? altrimenti fare confronto con metodo di hierarchical
-che raggiunge performance simili a kmeans- anche se meno paragonabile rispetto a ward's perchè lui + simile a kmeans dato che usa sse)
---> vedere se dire in general considerations o se in k-means
-
-- considerazioni generali su dataset, il clustering riesce a far emergere qualcosa riguardo alla struttura dei dati?
-
-- k-means algoritmo più lineare mentre dbscan e hierarchical più complessi, che magari fanno emergere cose più interessanti
-
-- confronto con titletype?
-
-- se mettiamo hierarchical clustering come prima subsection, spiegare il perchè
-
-- kmeans:
-    - obiettivo → trovare cluster ben separati, con silhouette onesta e SSE bassa
-    - risultato → 4 cluster ben separati, silhouette score di 0.315, SSE di 535.51
-    - confrontabile con metodi di hierarchical?
-
-- DBSCAN:
-        OBIETTIVO → trovare miglior compromesso tra struttura interpretabile (almeno 2 cluster), poco rumore e silhouette onesta.  
-        → e con cluster che anche se piccoli siano "effettivamente separati" 
-        problema →per caratteristiche del dataset stesso → DBSCAN tende a formare un cluster dominante nella zona densa che "cattura" la maggior parte dei dati 
-        (la classe maggioritaria) mentre dati + dispersi sono rappr come rumore o come micro-custer non significativi
-        Spesso epsilon alta →  porta a un comportamento più "aggressivo" nell'unire punti, risultando nel "cluster gigante" 
-        Tendenzialmente con epsilon più basso, l'algoritmo riesce a distinguere meglio le diverse densità,catturando sia la struttura principale che 
-        eventuali sottogruppi significativi.
-        "To conclude, these observations highlight DBSCAN's limitations when applied to datasets with skewed feature
-        distributions and unbalanced local densities. Nonetheless, the exploration helped isolate parameter ranges where
-        meaningful subclusters begin to emerge,beyond the dominant density mass."
 
